Improve performance of Java 11 sender